syntax = "proto3";

package metrics;

option go_package = "github.com/zubans/metrics/proto";

message Metric {
  string id = 1;           // metric name
  string type = 2;         // "gauge" or "counter"
  oneof value {
    double gauge_value = 3;   // for gauge metrics
    int64 counter_delta = 4;  // for counter metrics
  }
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  Metric metric = 1;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse {
  bool success = 1;
}

message GetMetricRequest {
  string id = 1;    //  name
  string type = 2;  // "gauge" or "counter"
}

message GetMetricResponse {
  Metric metric = 1;
}

message ListMetricsRequest {
}

message ListMetricsResponse {
  repeated Metric metrics = 1;
}

message PingRequest {
}

message PingResponse {
  bool success = 1;
}

service MetricsService {
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
  
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
  
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  
  rpc ListMetrics(ListMetricsRequest) returns (ListMetricsResponse);
  
  rpc Ping(PingRequest) returns (PingResponse);
}
